--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     volumes:
       - jenkins-data:/var/jenkins_home
       - jenkins-home:/home
-      - /var/run/docker.sock:/var/run/docker.sock                 
-      - $(which docker):/usr/bin/docker
+      - /var/run/docker.sock:/var/run/docker.sock         
+      - /usr/bin/docker:/usr/bin/docker         
 
   sonarqube:
     image: sonarqube:8.2-community
