--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   jenkins:
-    image: jenkins/jenkins:2.404-jdk17
+    image: jenkins/jenkins:latest-jdk17
     container_name: jenkins
     environment:
       - DOCKER_HOST=tcp://localhost:2375
