--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   jenkins:
-    image: jenkins/jenkins:jdk17
+    image: mirekphd/jenkins-jdk17-on-ubuntu2204:latest
     container_name: jenkins
     environment:
       - DOCKER_HOST=tcp://localhost:2375
